--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,10 +27,13 @@ jobs:
         with:
           firefox-version: latest
 
+      - name: Setup EdgeDriver
+        uses: browser-actions/setup-edge@v1
+        with:
+          edge-version: latest
+
       - name: Run Selenium Test
         run: python -m unittest test.test_api.test_cart.test_add_product
 
       - name: Run passwordLogic testing_layer
         run: python -m unittest test.test_ui.Add_to_cart.test_run_grid_parallel_test_get_quantity
-
-
