--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Setup EdgeDriver
         uses: browser-actions/setup-edge@v1
         with:
-          edge-version: latest
+          edge-version: '96.0.1054.62'
 
       - name: Run Selenium Test
         run: python -m unittest test.test_api.test_cart.test_add_product
