--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,10 @@ on: [push]
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
+    env:
+      INFRA_PATH: 'C:\Users\odehm\Desktop\repos\petsore\infra'
+      LOGIC_PATH: 'C:\Users\odehm\Desktop\repos\petsore\logic'
+      TEST_PATH: 'C:\Users\odehm\Desktop\repos\petsore\test'
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -32,6 +36,8 @@ jobs:
         with:
           edge-version: latest
 
+      - name: Run Selenium Test
+        run: python -m unittest test.test_api.test_cart.test_add_product
 
       - name: Run passwordLogic testing_layer
         run: python -m unittest test.test_ui.Add_to_cart.test_run_grid_parallel_test_get_quantity
