--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,10 +4,6 @@ on: [push]
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
-    env:
-      INFRA_PATH: 'C:\Users\odehm\Desktop\repos\petsore\infra'
-      LOGIC_PATH: 'C:\Users\odehm\Desktop\repos\petsore\logic'
-      TEST_PATH: 'C:\Users\odehm\Desktop\repos\petsore\test'
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -37,7 +33,7 @@ jobs:
           edge-version: latest
 
       - name: Run Selenium Test
-        run: python -m unittest test.test_api.test_cart.test_add_product
+        run: python -m unittest test/test_api/test_cart.test_add_product
 
       - name: Run passwordLogic testing_layer
-        run: python -m unittest test.test_ui.Add_to_cart.test_run_grid_parallel_test_get_quantity
+        run: python -m unittest test/test_ui/Add_to_cart/test_run_grid_parallel_test_get_quantity
