--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
           edge-version: latest
 
       - name: Run Selenium Test
-        run: python -m unittest test/test_api/test_cart.test_add_product
+        run: python -m unittest C:/Users/odehm/Desktop/repos/petsore/test/test_api/test_cart.py
 
       - name: Run passwordLogic testing_layer
-        run: python -m unittest test/test_ui/Add_to_cart/test_run_grid_parallel_test_get_quantity
+        run: python -m unittest C:/Users/odehm/Desktop/repos/petsore/test/test_ui/Add_to_cart.py
