--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,8 @@ jobs:
           edge-version: latest
 
       - name: Run API Test
-        run: python -m unittest test.test_api.test_cart
+        run: python -m unittest C:/Users/odehm/Desktop/repos/petsore/test/test_api/test_cart.py
+
 
       - name: Run UI Test
         run: python -m unittest test.test_ui.Add_to_cart
