--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,7 @@ jobs:
           edge-version: latest
 
       - name: Run API Test
-        run: python -m unittest test_cart.py
-
+        run: python -m unittest test.test_api.test_cart
 
       - name: Run UI Test
         run: python -m unittest test.test_ui.Add_to_cart
