--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,9 @@ on: [push]
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
+    env:
+       JSON_PATH: 'C:\Users\odehm\Desktop\repos\petsore\config.json'
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
