--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ jobs:
   build_and_test:
     runs-on: ubuntu-latest
     env:
-       JSON_PATH: C:/Users/odehm/Desktop/repos/petsore/config.json
+       JSON_PATH: config.json
 
     steps:
       - name: Checkout code
@@ -40,8 +40,6 @@ jobs:
 
       - name: Run API Test
         run: python -m unittest test.test_api.test_cart
-        env:
-            JSON_PATH: 'C:/Users/odehm/Desktop/repos/petsore/config.json'
 
       - name: Run UI Test
         run: python -m unittest test.test_ui.Add_to_cart
