--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ jobs:
   build_and_test:
     runs-on: ubuntu-latest
     env:
-       JSON_PATH: config.json
+       JSON_PATH: '/home/runner/work/petsore/petsore/config.json'
 
     steps:
       - name: Checkout code
