--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,9 +5,7 @@ jobs:
   build_and_test:
     runs-on: ubuntu-latest
     env:
-      INFRA_PATH: '/home/runner/work/petsore/petsore/infra'
-      LOGIC_PATH: '/home/runner/work/petsore/petsore/logic'
-      JSON_PATH: '/home/runner/work/petsore/petsore/config.json'
+      JSON_PATH: 'config.json'
 
     steps:
       - name: Checkout code
