--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "url": "https://petstore.com/",
   "hub_url": "http://localhost:4444/wd/hub",
-  "grid": true,
-  "serial": false,
+  "grid": false,
+  "serial": true,
   "browser":"chrome",
   "platform": "windows",
   "browser_types": ["chrome" ,"edge","firefox"]
