use yml with docker

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,8 @@ jobs:
         with:
           edge-version: latest
 
+      - name: Run Docker
+        run: docker run --rm -v $PWD:/usr/src/tests -w /usr/src/tests your_docker_image_name
+
       - name: Run Test
         run: python -m unittest test.End_to_End
-
-
